--- a/estilos/style.css
+++ b/estilos/style.css
@@ -25,18 +25,18 @@ li {
 
 .frase {
 
-    padding: 10px 10px 10px 10px;
+    padding: 10px 10px 100px 100px;
     border: 0px;
     margin-left: 230px;
-    margin-right: 675px;
+    margin-right: 200px;
 
 
 }
 
-section {
+/*section {
     padding: 10px 10px 10px 10px;
     border: 0px;
-    margin-top: 130px;
+    margin-top: 100px;
 
 
 
@@ -73,7 +73,7 @@ section {
     right: 10px;
     bottom: 10px;
 }
-
+*/
 .productoVideo {
     padding: 10px 10px 10px 10px;
     border: 0px;
@@ -197,5 +197,15 @@ h2 {
     background-color: turquoise;
     border-color: tomato;
     border-radius: 5px;
+}
+
+.lomasVendido {
+    display: grid;
+    grid-template-columns: 2fr 2fr; 
+    grid-template-rows: 2fr 2fr;
+    grid-template-areas: 
+    "musculosaHombrera remeraKaty"
+    "shortMarruecos topIbis"
+    ;
 }
 
