--- a/estilos/style.css
+++ b/estilos/style.css
@@ -163,7 +163,7 @@ grid-auto-rows: auto;
     animation-duration: 5s; /* don't forget to set a duration! */
   }
 
-  . {
+  .tituloFooter {
     display: auto;
     margin: 50px 5.5rem;
   
