--- a/estilos/style.css
+++ b/estilos/style.css
@@ -192,8 +192,8 @@
         display: auto;
         margin: 50px 5.5rem;
       
-        animation: bounce; /* referring directly to the animation's @keyframe declaration */
-        animation-duration: 5s; /* don't forget to set a duration! */
+        animation: bounce; 
+        animation-duration: 5s; 
       }
     
       .tituloFooter {
