--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,4 +1,4 @@
-@media screen and (min-width:380px) {
+@media only screen and (min-width:1024px) {
     body {
         background-color: rgb(252, 252, 252);
     }
@@ -17,8 +17,7 @@
 }
 
 
-
-@media screen and (min-width:380px) {
+@media only screen and (min-width:1024px) {
     .productoVideo {
         padding: 10px 10px 10px 10px;
         border: 0px;
@@ -45,7 +44,7 @@
     }
 }
 
-@media screen and (min-width:380px) {
+@media only screen and (min-width:1024px) {
 
     .donde {
 
@@ -71,7 +70,7 @@
 
 
 
-    @media screen and (min-width:380px) {
+    @media only screen and (min-width:1024px) {
 
         
         
@@ -88,7 +87,7 @@
     }
 
 
-    @media screen and (min-width:380px) {
+    @media only screen and (min-width:1024px) {
         .lomasVendido {
             display: flex;
             flex-direction: row;
@@ -103,7 +102,7 @@
 
     }
 
-    @media screen and (min-width:380px) {
+    @media only screen and (min-width:1024px) {
         /*.productos {
             display:grid;
             grid-template-columns: 2fr 2fr;
@@ -187,7 +186,7 @@
         animation-duration: 5s;
     }
 
-    @media screen and (min-width:380px) {
+    @media only screen and (min-width:1024px) {
         .pieSansa {
             display: flex;
             flex-direction: row;
@@ -348,3 +347,4 @@
         outline: 0;
         border: 1px solid #97d848;
     }
+}
