--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,6 +3,14 @@
         background-color: rgb(252, 252, 252);
     }
 
+    .cabeza { 
+        display: flex;
+    }
+
+}
+@media screen and (min-width:380px) {
+    
+
     .logoSansa {
 
         width: 80px;
