--- a/estilos/style.css
+++ b/estilos/style.css
@@ -154,8 +154,8 @@
     @media screen and (min-width:1024px) {
         .productos {
            display: grid;
-           margin: auto;
-           padding: auto;
+           margin: 50px 10px 10px 50px ;
+           padding:50px 10px 10px 50px;
             grid-template-rows: 30px 300px 30px 30px 300px 30px 300px 30px 30px 300px 30px ;
             grid-template-columns: 300px 300px 300px ;
             height: 80vh;
@@ -273,7 +273,8 @@
 
     .frase {
         
-        margin: 50px 5.5rem;
+        margin: 50px 10px 10px 50px ;
+        padding:50px 10px 10px 50px;
 
         animation: bounce;
         animation-duration: 5s;
@@ -512,3 +513,34 @@ si quito esta propiedad se rompia el orden pueden comentarlo para ver lo que suc
         }
     
     }
+
+
+    /*seccion nosotros, responsive de texto e iimagen*/
+
+
+   
+
+    .quienSos {
+        margin: 10px 10px 10px 10px;
+        padding:10px 10px 10px 10px;
+
+    }
+
+    .textoQuien {
+        margin: 10px 10px 10px 10px;
+        padding:10px 10px 10px 10px;
+    
+    }
+
+    .showRoom{
+        margin: 10px 10px 10px 10px;
+        padding:10px 10px 10px 10px;
+        width: 100%;
+        min-width: 380px;
+
+    }
+
+
+
+
+
